# portfolio-optimization

./: .gitignore  pyproject.toml
misc/past-attempts/boilerplate/: boilerplate.py
misc/past-attempts/monte_carlo_resampling/: __init__.py  monte_carlo_resampling.py
misc/utils/: assets.json  load_assets.py  monthly_returns.py  optimize_weights_monte_carlo.py  ticker_fetcher.py  yearly_returns.py
portfolio_optimization/: __init__.py  __main__.py
portfolio_optimization/algorithms/: __init__.py  base.py  minimum_variance.py
portfolio_optimization/data/: fetcher.py
portfolio_optimization/utils/: solvers.py
